ci/policy-tests/kyverno/baseline/disallow-selinux/pod-allowed-type-pass.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: allowed-type-workload
  namespace: default
spec:
  restartPolicy: Always
  securityContext:
    seLinuxOptions:
      type: container_kvm_t
  containers:
  - name: app
    image: ghcr.io/example/app:1.0.0
    securityContext:
      seLinuxOptions:
        type: container_init_t
