ci/policy-tests/kyverno/baseline/disallow-selinux/pod-disallowed-type-fail.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: disallowed-type-workload
  namespace: default
spec:
  restartPolicy: Always
  containers:
  - name: app
    image: ghcr.io/example/app:1.0.0
    securityContext:
      seLinuxOptions:
        type: spc_t
