ci/policy-tests/kyverno/baseline/disallow-selinux/pod-user-role-set-fail.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: user-role-set-workload
  namespace: default
spec:
  restartPolicy: Always
  containers:
  - name: app
    image: ghcr.io/example/app:1.0.0
    securityContext:
      seLinuxOptions:
        type: container_t
        user: system_u
        role: system_r
